# cloudevents-demo

./: .gitignore  BUILD.bazel  Gopkg.toml  README.md  WORKSPACE  encoding_binary.go  encoding_structured.go  event.go  event_test.go  handler.go  handler_test.go
cmd/sendevent/: BUILD.bazel  main.go
cmd/twittervision/: BUILD.bazel  README.md  creating-a-kubernetes-cluster.md  deployment.yaml  google-secret.yaml  main.go  service.yaml  twitter-secret.yaml
cmd/twittervision/app/: BUILD.bazel  app.go  app_test.go
cmd/twittervision/azure/: BUILD.bazel  object.go
cmd/twittervision/gcs/: BUILD.bazel  object.go
cmd/twittervision/s3/: BUILD.bazel  object.go
eventsource/: README.md
eventsource/appengine/: cron.yaml
eventsource/functions/: package.json
eventsource/functions/src/: index.ts
gcf2ce/: converter.js  package-lock.json  package.json
pkg/event/: BUILD.bazel  event.go  event_test.go  handler.go  handler_test.go
service/github/: BUILD  README.md  configuration.yaml  eventsource.yaml  eventtype.yaml  pullrequest.yaml  route.yaml
