load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/cloudevents-demo/cmd/sendevent",
    visibility = ["//visibility:private"],
    deps = ["//pkg/event:go_default_library"],
)

go_binary(
    name = "sendevent",
    embed = [":go_default_library"],
    importpath = "github.com/google/cloudevents-demo/cmd/sendevent",
    visibility = ["//visibility:public"],
)
